# kediq

./: CMakeLists.txt  MainWindow.cpp  README.md
